infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mtg-sparrow
  labels:
    app.kubernetes.io/managed-by: kubectl
    project: mtg-sparrow
